[package]
name = "aletheia"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Aletheia cognitive agent runtime"
publish = false

[[bin]]
name = "aletheia"
path = "src/main.rs"

[features]
# WARNING: embed-candle must remain in defaults. It has been accidentally
# removed three times: #1263, #1326, #1378. A compile-time test in
# tests/default_features.rs guards against recurrence.
default = ["tui", "recall", "storage-fjall", "embed-candle"]
# MCP server (Model Context Protocol). Disabled by default: adds context-window
# cost and auth friction for local deployments. Enable with `--features mcp`.
mcp = ["dep:diaporeia"]
# Recall pipeline: enables KnowledgeStore for vector search + extraction persistence.
recall = ["nous/knowledge-store", "mneme/mneme-engine", "mneme/storage-fjall", "pylon/knowledge-store"]
# fjall storage backend for mneme (LSM-tree, pure Rust, LZ4 compression).
storage-fjall = ["mneme/storage-fjall"]
# Local ML embeddings via candle.
embed-candle = ["mneme/embed-candle"]
migrate-qdrant = ["dep:qdrant-client", "mneme/mneme-engine", "mneme/storage-fjall"]
tls = ["pylon/tls"]
keyring = ["symbolon/keyring"]
tui = ["dep:koilon"]
# Claude Code subprocess provider: delegates LLM calls to the `claude` CLI.
cc-provider = ["hermeneus/cc-provider"]
# Dispatch orchestration (kanon phronesis port). Default off for incremental development.
energeia = ["dep:energeia"]
# Test tiers (see docs/test-tiers.md)
test-core = ["mneme/test-core", "nous/test-core", "pylon/test-core"]
test-full = ["test-core", "mneme/test-full"]

[dependencies]
diaporeia = { path = "../diaporeia", optional = true }
dianoia = { path = "../dianoia" }
energeia = { path = "../energeia", optional = true }
oikonomos = { path = "../daemon" }
koina = { path = "../koina" }
taxis = { path = "../taxis" }
hermeneus = { path = "../hermeneus" }
organon = { path = "../organon" }
mneme = { path = "../mneme" }
nous = { path = "../nous" }
symbolon = { path = "../symbolon" }
pylon = { path = "../pylon" }
agora = { path = "../agora" }
dokimion = { path = "../eval" }
thesauros = { path = "../thesauros" }
koilon = { path = "../theatron/koilon", optional = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }

indexmap = { workspace = true }
jiff = { workspace = true }

cliclack = "0.5"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
qdrant-client = { version = "1", optional = true }
rand = { workspace = true }
sha2 = "0.11"
anyhow = "1"
snafu = { workspace = true }
rcgen = { workspace = true }
# time is a direct dep because rcgen's CertificateParams.not_before/not_after are
# time::OffsetDateTime. rcgen already depends on time transitively, so this does
# not add a new crate to the binary — it only pins our access to the same version.
time = "0.3"
owo-colors = "4"
supports-color = "3"
toml = { workspace = true }
toml_edit = "0.25"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
