[package]
name = "aletheia"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Aletheia cognitive agent runtime"
publish = false

[[bin]]
name = "aletheia"
path = "src/main.rs"

[features]
# WARNING: embed-candle must remain in defaults. It has been accidentally
# removed three times: #1263, #1326, #1378. A compile-time test in
# tests/default_features.rs guards against recurrence.
default = ["tui", "recall", "storage-fjall", "embed-candle", "cc-provider"]
# MCP server (Model Context Protocol). Disabled by default: adds context-window
# cost and auth friction for local deployments. Enable with `--features mcp`.
mcp = ["dep:diaporeia"]
# Recall pipeline: enables KnowledgeStore for vector search + extraction persistence.
recall = ["nous/knowledge-store", "mneme/mneme-engine", "mneme/storage-fjall", "pylon/knowledge-store"]
# fjall storage backend for mneme (LSM-tree, pure Rust, LZ4 compression).
storage-fjall = ["mneme/storage-fjall"]
# Local ML embeddings via candle.
embed-candle = ["mneme/embed-candle"]
# WHY: network-dependent candle tests that download HuggingFace model weights
# at test time. Opt-in only (see #3683). Enable in scheduled or label-triggered
# CI jobs — never part of the default PR gate.
online-tests = ["mneme/online-tests"]
migrate-qdrant = ["dep:qdrant-client", "mneme/mneme-engine", "mneme/storage-fjall"]
tls = ["pylon/tls"]
keyring = ["symbolon/keyring"]
tui = ["dep:koilon"]
# Claude Code subprocess provider: delegates LLM calls to the `claude` CLI.
cc-provider = ["hermeneus/cc-provider"]
# Dispatch orchestration (kanon phronesis port). Default off for incremental development.
energeia = ["dep:energeia", "oikonomos/dispatch-cron"]
# Matrix channel provider (conduwuit homeserver + fjall-backed CryptoStore). See
# issue #3557. Off by default: pulls in matrix-sdk-base + matrix-sdk-crypto
# (vodozemac) which add ~60s to cold compile times.
matrix = ["agora/matrix"]
# Test tiers (see docs/test-tiers.md)
test-core = ["mneme/test-core", "nous/test-core", "pylon/test-core"]
test-full = ["test-core", "mneme/test-full", "online-tests"]

[dependencies]
diaporeia = { path = "../diaporeia", optional = true }
dianoia = { path = "../dianoia" }
energeia = { path = "../energeia", optional = true }
oikonomos = { path = "../daemon" }
koina = { path = "../koina", features = ["fjall"] }
taxis = { path = "../taxis" }
fjall = { version = "3", default-features = false }
hermeneus = { path = "../hermeneus" }
organon = { path = "../organon" }
mneme = { path = "../mneme" }
nous = { path = "../nous" }
symbolon = { path = "../symbolon" }
pylon = { path = "../pylon" }
agora = { path = "../agora" }
dokimion = { path = "../eval" }
thesauros = { path = "../thesauros" }
koilon = { path = "../theatron/koilon", optional = true }
# WHY: direct deps needed to wire per-crate metric registration at startup.
# The binary is the only assembly point that imports every metrics-emitting
# crate, so `register_all_metrics` lives here (prometheus-client has no
# process-wide global registry).
melete = { path = "../melete" }
graphe = { path = "../graphe", default-features = false }
episteme = { path = "../episteme", default-features = false }

tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
ring = { version = "0.17", default-features = false }

indexmap = { workspace = true }
jiff = { workspace = true }

cliclack = "0.5"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
qdrant-client = { version = "1", optional = true }
rand = { workspace = true }
sha2 = { workspace = true }
anyhow = "1"
snafu = { workspace = true }
pem = { workspace = true }
owo-colors = "4"
quick-xml = "0.39"
supports-color = "3"
toml = { workspace = true }
toml_edit = "0.25"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
