[package]
name = "aletheia"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Aletheia cognitive agent runtime"
publish = false

[[bin]]
name = "aletheia"
path = "src/main.rs"

[[bin]]
name = "seed_psyche_facts"
path = "src/bin/seed_psyche_facts.rs"

[features]
# WARNING: embed-candle must remain in defaults. It has been accidentally
# removed three times: #1263, #1326, #1378. A compile-time test in
# tests/default_features.rs guards against recurrence.
default = ["tui", "recall", "storage-fjall", "embed-candle", "cc-provider"]
# MCP server (Model Context Protocol). Disabled by default: adds context-window
# cost and auth friction for local deployments. Enable with `--features mcp`.
mcp = ["dep:diaporeia", "dep:rmcp"]
# Recall pipeline: enables KnowledgeStore for vector search + extraction persistence.
recall = ["nous/knowledge-store", "mneme/mneme-engine", "mneme/storage-fjall", "pylon/knowledge-store", "oikonomos/knowledge-store"]
# fjall storage backend for mneme (LSM-tree, pure Rust, LZ4 compression).
storage-fjall = ["mneme/storage-fjall"]
# Local ML embeddings via candle.
embed-candle = ["mneme/embed-candle"]
# WHY: network-dependent candle tests that download HuggingFace model weights
# at test time. Opt-in only (see #3683). Enable in scheduled or label-triggered
# CI jobs — never part of the default PR gate.
online-tests = ["mneme/online-tests"]
migrate-qdrant = ["dep:qdrant-client", "mneme/mneme-engine", "mneme/storage-fjall"]
tls = ["pylon/tls"]
keyring = ["symbolon/keyring"]
tui = ["dep:koilon"]
# Claude Code subprocess provider: delegates LLM calls to the `claude` CLI.
cc-provider = ["hermeneus/cc-provider"]
# Codex subprocess provider: delegates LLM calls to the `codex` CLI.
codex-provider = ["hermeneus/codex-provider"]
# Kimi subprocess provider: delegates LLM calls to the `kimi` CLI.
kimi-provider = ["hermeneus/kimi-provider"]
# Dispatch orchestration and agent-facing Energeia capability tools. Default off for
# incremental development.
energeia = ["dep:energeia", "energeia/storage-fjall", "organon/energeia"]
# Bookkeeper tool passthrough. Default off; enables operator maintenance tools.
bookkeeper = ["organon/bookkeeper"]
# Computer-use tool passthrough. Default off; requires Linux sandbox support.
computer-use = ["organon/computer-use"]
# Z3 SMT solver passthrough. Default off to avoid pulling bundled libz3.
z3 = ["organon/z3"]
# Test tiers (see docs/test-tiers.md)
test-core = ["mneme/test-core", "nous/test-core", "pylon/test-core"]
test-full = ["test-core", "mneme/test-full", "online-tests"]

[dependencies]
diaporeia = { path = "../diaporeia", optional = true }
rmcp = { version = "=1.5.0", optional = true, features = ["client"] }
dianoia = { path = "../dianoia" }
aletheia-routing = { path = "../aletheia-routing" }
energeia = { path = "../energeia", optional = true }
oikonomos = { path = "../daemon" }
koina = { path = "../koina", features = ["fjall"] }
taxis = { path = "../taxis" }
fjall = { version = "3", default-features = false, features = ["lz4"] }
hermeneus = { path = "../hermeneus" }
organon = { path = "../organon" }
mneme = { path = "../mneme" }
nous = { path = "../nous" }
symbolon = { path = "../symbolon" }
pylon = { path = "../pylon" }
agora = { path = "../agora" }
dokimion = { path = "../eval" }
episteme = { path = "../episteme" }
thesauros = { path = "../thesauros" }
koilon = { path = "../theatron/koilon", optional = true }
# WHY: direct deps needed to wire per-crate metric registration at startup.
# The binary is the only assembly point that imports every metrics-emitting
# crate, so `register_all_metrics` lives here (prometheus-client has no
# process-wide global registry).
melete = { path = "../melete" }

tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
p256 = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }

indexmap = { workspace = true }
jiff = { workspace = true }

cliclack = "0.5"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
qdrant-client = { version = "1", optional = true }
rand = { workspace = true }
sha2 = { workspace = true }
anyhow = "1"
base64 = { workspace = true }
snafu = { workspace = true }
pem = { workspace = true }
owo-colors = "4"
quick-xml = "0.39"
supports-color = "3"
toml = { workspace = true }
toml_edit = "0.25"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
hermeneus = { path = "../hermeneus", features = ["test-support"] }
mneme = { path = "../mneme", features = ["test-support"] }
rmp-serde = "1.2"
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
