[package]
name = "basanos"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Planning and standards linter for kanon projects"
publish = false

[[bin]]
name = "basanos"
path = "src/main.rs"

[lints]
workspace = true

[features]
test-core = []

[dependencies]
regex = { workspace = true }
snafu = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
