[package]
name = "oikonomos"
version.workspace = true
description = "Oikonomos (the steward) -- per-nous background task runner, cron scheduling, prosoche attention"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
# WHY: gates anomaly detection (prosoche memory consistency checks) on the
# Krites-backed KnowledgeStore from episteme. Not all daemon users need it.
knowledge-store = ["episteme/mneme-engine"]
test-core = []
test-full = []

[dependencies]
aletheia-routing = { path = "../aletheia-routing" }
episteme = { path = "../episteme", default-features = false }
koina = { path = "../koina", features = ["fjall"] }
mneme = { path = "../mneme" }
taxis = { path = "../taxis" }
# WHY: axum for webhook trigger listener
axum = { workspace = true }
# WHY: single-instance enforcement per workspace. Used directly via rustix::fs::flock
# rather than through fd-lock because fd-lock's RwLockWriteGuard releases the
# advisory lock on drop, which is incompatible with storing the guard in
# WorkspaceGuard for the lifetime of the daemon process. rustix's flock binds
# the lock to the file descriptor, so the lock lives until the File is dropped.
rustix = { version = "1", default-features = false, features = ["fs", "std"] }
# WHY: fjall is the task-state backend -- pure Rust LSM-tree, zero C deps.
fjall = { version = "3", default-features = false, features = ["lz4"] }
flate2 = { workspace = true }
jiff = { workspace = true, features = ["serde"] }
# WHY: file watcher triggers (inotify on Linux)
notify = { workspace = true }
prometheus-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["process", "signal"] }
tokio-util = { workspace = true }
# WHY: daemon.toml workspace opt-in config
toml = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
episteme = { path = "../episteme", default-features = false, features = [
    "storage-fjall",
] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
