[package]
name = "aletheia-dianoia"
version.workspace = true
description = "Planning and project orchestration — multi-phase state machine with workspace persistence"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
test-core = []
test-full = []

[dependencies]
jiff = { workspace = true, features = ["serde"] }
prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
static_assertions = { workspace = true }
tempfile = { workspace = true }
