[package]
name = "eidos"
version.workspace = true
description = "Shared knowledge types for the Aletheia memory layer"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
test-core = []
test-full = []
# WHY: exposes test_fixtures module with Fact/Entity/Relationship builders
# for downstream crates. Not compiled in production builds.
test-support = []

[dependencies]
jiff = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
