[package]
name = "aletheia-energeia"
version.workspace = true
description = "Dispatch orchestration — actualization of plans into execution"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
test-core = ["storage-fjall"]
test-full = []
storage-fjall = ["dep:fjall"]

[dependencies]
aletheia-koina = { path = "../koina" }
async-trait = "0.1"
aletheia-eidos = { path = "../eidos" }
prometheus = { workspace = true }
regex = { workspace = true }
# WHY: hermeneus has pre-existing compilation errors on main (kanon lint pass
# introduced unwrap_or_default on non-Default types). Add dependency once
# hermeneus compiles again; implementations will need it for LLM evaluation.
# aletheia-hermeneus = { path = "../hermeneus" }
fjall = { version = "3", optional = true }
jiff = { workspace = true, features = ["serde"] }
rmp-serde = "1.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "test-util"] }
