[package]
name = "energeia"
version.workspace = true
description = "Dispatch orchestration — actualization of plans into execution"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
test-core = ["storage-fjall"]
test-full = []
storage-fjall = ["dep:fjall", "koina/fjall"]

[dependencies]
aletheia-routing = { path = "../aletheia-routing" }
compact_str = { workspace = true }
koina = { path = "../koina" }
eidos = { path = "../eidos" }
hermeneus = { path = "../hermeneus" }
prometheus-client = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
fjall = { version = "3", optional = true }
jiff = { workspace = true, features = ["serde"] }
jiff-cron = "0.3"
parking_lot = { version = "0.12", default-features = false }
reqwest = { workspace = true }
rmp-serde = "1.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
sha2 = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rustls = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "test-util"] }
wiremock = { workspace = true }
hermeneus = { path = "../hermeneus", features = ["test-utils"] }
