[package]
name = "aletheia-episteme"
version.workspace = true
description = "Knowledge pipeline for Aletheia"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["graph-algo"]
graph-algo = []
test-support = []
# WHY: graphe/sqlite is required because knowledge_portability.rs (gated on
# mneme-engine) references aletheia_graphe::portability which lives behind sqlite.
mneme-engine = ["dep:aletheia-krites", "dep:tokio", "aletheia-graphe/mneme-engine", "aletheia-graphe/sqlite"]
storage-fjall = ["mneme-engine", "aletheia-krites/storage-fjall"]
embed-candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]
# Test tiers (see docs/test-tiers.md)
test-core = ["mneme-engine"]
test-full = ["test-core", "embed-candle"]

[dependencies]
aletheia-eidos = { path = "../eidos" }
aletheia-graphe = { path = "../graphe", default-features = false }
aletheia-koina = { path = "../koina" }
aletheia-krites = { path = "../krites", optional = true }
jiff = { workspace = true, features = ["serde"] }
parking_lot = "0.12"
prometheus = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, optional = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-normalization = { version = "0.1" }

# Candle embedding dependencies
candle-core = { version = "=0.10.2", optional = true }
candle-nn = { version = "=0.10.2", optional = true }
candle-transformers = { version = "=0.10.2", optional = true }
tokenizers = { version = "0.22", optional = true, default-features = false, features = [
    "fancy-regex",
] }
# WHY: only "ureq" needed — code uses hf_hub::api::sync::Api (blocking).
# The "tokio" feature pulled in reqwest 0.12 alongside workspace reqwest 0.13,
# compiling two full HTTP client stacks. Switching to ureq resolved the reqwest
# duplication (#2079). ureq handles TLS via its own rustls.
hf-hub = { version = "0.5", optional = true, default-features = false, features = [
    "ureq",
] }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

# WHY: extract::observation parsers run on every PR scraped by the bookkeeper.
# Track them here so regressions in the regex/tag pipeline surface in CI.
[[bench]]
name = "observation"
harness = false
