[package]
name = "episteme"
version.workspace = true
description = "Knowledge pipeline for Aletheia"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["graph-algo"]
graph-algo = []
test-support = []
# WHY: mneme-engine brings in the Datalog knowledge store via krites and the
# tokio blocking-task utilities graphe's engine errors need.
mneme-engine = ["dep:krites", "dep:tokio", "graphe/mneme-engine"]
storage-fjall = ["mneme-engine", "krites/storage-fjall"]
embed-candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]
# WHY: candle embedding tests download config.json from HuggingFace at test
# time. macOS GitHub runners intermittently fail DNS lookup for huggingface.co
# (see #3683). Gate those network-dependent tests behind `online-tests` so the
# default CI matrix never depends on external reachability. Enable explicitly
# in scheduled or label-triggered jobs.
online-tests = []
# Test tiers (see docs/test-tiers.md)
test-core = ["mneme-engine"]
test-full = ["test-core", "embed-candle", "online-tests"]

[dependencies]
eidos = { path = "../eidos" }
graphe = { path = "../graphe", default-features = false }
koina = { path = "../koina" }
krites = { path = "../krites", optional = true }
jiff = { workspace = true, features = ["serde"] }
parking_lot = "0.12"
prometheus-client = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, optional = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-normalization = { version = "0.1" }

# Candle embedding dependencies
candle-core = { version = "=0.10.2", optional = true }
candle-nn = { version = "=0.10.2", optional = true }
candle-transformers = { version = "=0.10.2", optional = true }
tokenizers = { version = "0.22", optional = true, default-features = false, features = [
    "fancy-regex",
] }
# WHY: only "ureq" needed — code uses hf_hub::api::sync::Api (blocking).
# The "tokio" feature pulled in reqwest 0.12 alongside workspace reqwest 0.13,
# compiling two full HTTP client stacks. Switching to ureq resolved the reqwest
# duplication (#2079). ureq handles TLS via its own rustls.
hf-hub = { version = "0.5", optional = true, default-features = false, features = [
    "ureq",
] }

[dev-dependencies]
criterion = { workspace = true }
eidos = { path = "../eidos", features = ["test-support"] }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

# WHY: extract::observation parsers run on every PR scraped by the bookkeeper.
# Track them here so regressions in the regex/tag pipeline surface in CI.
[[bench]]
name = "observation"
harness = false
