[package]
name = "dokimion"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Behavioral eval framework — scenario-based API testing against a live instance"
publish = false

[lints]
workspace = true

[features]
test-core = []
test-full = []

[dependencies]
mneme = { path = "../mneme", default-features = false }
koina = { path = "../koina" }
poiesis-typst = { path = "../poiesis/typst" }
jiff = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
owo-colors = "4"
supports-color = "3"
sha2 = { workspace = true }

[dev-dependencies]
organon = { path = "../organon", features = ["test-support"] }
wiremock = { workspace = true }
# WHY: benchmark runner tests need to install the rustls crypto provider
# since the workspace uses `reqwest` with `rustls-no-provider`.
rustls = { workspace = true }
