[package]
name = "gnosis"
version.workspace = true
description = "Machine-derived code-graph index for symbol-level cross-crate queries"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[features]
# Gates test helpers and integration fixtures.
test-core = []
test-full = []

[dependencies]
cargo_metadata = "0.18"
parking_lot = "0.12"
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
fjall = { version = "3", default-features = false, features = ["lz4"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
