[package]
name = "aletheia-graph-builder"
version = "0.1.0"
description = "CSR graph construction and traversal for Aletheia graph algorithms (graph_builder 0.4.1 absorbed)"
edition.workspace = true
license = "MIT"
repository.workspace = true
rust-version.workspace = true

[lints.rust]
# Workspace-equivalent: future_incompatible, nonstandard_style, rust_2018_idioms, unsafe_code
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
# Absorbed graph_builder crate — 42+ unsafe sites, separate cleanup tracked
unsafe_code = { level = "allow", priority = 1 }
# Absorbed code predates 2018 edition idiom enforcement
rust_2018_idioms = { level = "allow", priority = 1 }

[lints.clippy]
# Workspace-equivalent: pedantic (warn), deny-level, high-value warnings, allows
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
await_holding_lock = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
implicit_clone = "warn"
large_types_passed_by_value = "warn"
map_err_ignore = "warn"
match_wildcard_for_single_variants = "warn"
needless_for_each = "warn"
rc_mutex = "warn"
string_add = "warn"
trait_duplication_in_bounds = "warn"
unused_self = "warn"
# Absorbed graph_builder overrides — suppress for absorbed vendored code
pedantic = { level = "allow", priority = 1 }
mutable_key_type = { level = "allow", priority = 1 }
dbg_macro = { level = "allow", priority = 1 }
todo = { level = "allow", priority = 1 }
unimplemented = { level = "allow", priority = 1 }

[dependencies]
rayon = "=1.10.0"
atoi = "2.0"
atomic = "0.5"
byte-slice-cast = "1.2"
delegate = "0.8"
fast-float2 = "0.2"
log = "0.4"
memmap2 = "0.5"
num_cpus = "1.16"
page_size = "0.6"
parking_lot = "0.12"
snafu = { workspace = true }

[dev-dependencies]
tempfile = "3"
